# curvedetect

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-lnx.sh  build-win.sh
app-gui/: CMakeLists.txt
app-gui/include/: clipboard.h  curve_detect.h  curveview.h  image.h  image_elements.h  mainwindow.h  mat_file_writer.h  snap_cache.h
app-gui/src/: clipboard-nix.cpp  clipboard-win.cpp  curve_detect.cpp  curveview.cpp  image.cpp  image_elements.cpp  main.cpp  mainwindow.cpp  mat_file_writer.cpp  snap_cache.cpp
glad/: glad.h
glad/src/: glad.c
inc/: clipboard.h  curve_detect.h  image.h  image_elements.h  imgui_helpers.h  imgui_impl_opengl3.h  main_app.h  main_controller.h  main_window.h  mat_file_writer.h  resources.h  snap_cache.h
libs/: CMakeLists.txt
res/: CMakeLists.txt  build-res.bat  build-res.sh  resources.json  win-res.rc
src/: clipboard-nix.cpp  clipboard-win.cpp  clipboard.cpp  curve_detect.cpp  image.cpp  image_elements.cpp  imgui_helpers.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp  main_app.cpp  main_controller.cpp  main_window.cpp  mat_file_writer.cpp  resources-nix.cpp  resources-win.cpp  resources.cpp  snap_cache.cpp
